--- a/src/components/scss/components/_search.scss
+++ b/src/components/scss/components/_search.scss
@@ -1,18 +1,35 @@
 .search {
-  position: relative;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 1px;
+  font-size: 14px;
 }
+
+.search__input {
+  border: none;
+  padding: 5px;
+  transition: width 0.2s ease; 
+  width: 130px; 
+ 
+}
+.search__input:focus {
+  width: 200px; 
+}
+
 .search__icon {
+  width: 13px;
+  height: 13px;
+  fill: #999;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.search__clear-icon {
   width: 15px;
   height: 15px;
-  left: 175px;
-  bottom: 5px;
-  opacity: 0.4;
-  position: absolute;
-}
-.search__input {
-  width: 200px;
-  background-color: #f1ededf2;
-  font-size: 14px;
-  padding: 3px;
-  border-radius: 3px;
+  fill: #999;
+  cursor: pointer;
+  margin-right: 3px;
 }
