--- a/src/components/scss/components/_cart.scss
+++ b/src/components/scss/components/_cart.scss
@@ -11,7 +11,12 @@
   display: flex;
   flex-direction: start;
 }
-
+.cart__title-buy{
+  padding: 0.6% 2%;
+  background: rgb(19, 128, 19);
+  font-size: 22px;
+  color: #fff;
+}
 .cart__wrapper {
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
@@ -48,10 +53,20 @@
   font-size: 16px;
   margin: 5px 0;
 }
+.quantity{
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+}
+.cart_quantity{
+  width: 30px;
+  cursor: pointer;
+}
 .cart__clear {
   color: black;
   font-size: 14px;
   margin-right: 100px;
+  cursor: pointer;
 }
 .cart_clear-icon {
   width: 50px;
