--- a/src/components/scss/components/_cart.scss
+++ b/src/components/scss/components/_cart.scss
@@ -23,9 +23,26 @@
   gap: 20px;
   text-align: center;
   margin-top: 20px;
-
 }
-
+.cart__basket{
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.cart__basket h1{
+  font-size: 25px;
+}
+.cart__basket a{
+  padding: 1% 2%;
+  width: 15%;
+  background-color: rgb(62, 192, 62);
+  color: #fff;
+  &:hover{
+    background-color: blue;
+  }
+}
 .cart__item {
   display: flex;
   align-items: center;
@@ -69,7 +86,7 @@
   cursor: pointer;
 }
 .cart_clear-icon {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   
 }
