--- a/src/components/scss/components/_cart.scss
+++ b/src/components/scss/components/_cart.scss
@@ -13,9 +13,11 @@
 }
 .cart__title-buy{
   padding: 0.6% 2%;
-  background: rgb(19, 128, 19);
+  background: gray;
   font-size: 22px;
   color: #fff;
+  border-radius: 5px;
+  box-shadow: 1px 8px 10px 0px #000000;
 }
 .cart__wrapper {
   display: grid;
@@ -26,10 +28,10 @@
 }
 .cart__basket{
   height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  // flex-direction: column;
+  // justify-content: space-around;
+  // align-items: center;
 }
 .cart__basket h1{
   font-size: 25px;
@@ -37,30 +39,31 @@
 .cart__basket a{
   padding: 1% 2%;
   width: 15%;
-  background-color: rgb(62, 192, 62);
+  background-color: gray;
   color: #fff;
-  &:hover{
-    background-color: blue;
-  }
+  border-radius: 5px;
+  box-shadow: 1px 8px 10px 0px #000000;
 }
 .cart__item {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  width: 100%;
+  gap: 10%;
   box-shadow: 0 0 8px #e0e0e0;
-  padding: 20px;
   border-radius: 5px;
 }
 
 .cart__image {
   width: 150px;
   height: auto;
-  margin-left: 100px;
 }
-
+.cart__desc{
+  width: 30%;
+  // border: 1px solid red;
+  height: 100%;
+}
 .cart__name {
   font-size: 18px;
-  min-width: 230px;
   font-weight: 600;
 }
 .cart__count {
@@ -74,6 +77,7 @@
   width: 15%;
   display: flex;
   justify-content: space-between;
+  // border: 1px solid red;
 }
 .cart_quantity{
   width: 30px;
@@ -82,11 +86,51 @@
 .cart__clear {
   color: black;
   font-size: 14px;
-  margin-right: 100px;
   cursor: pointer;
+  width: 20%;
+  // border: 1px solid red;
 }
 .cart_clear-icon {
   width: 30px;
   height: 30px;
-  
+}
+@media (max-width:992px){
+  .quantity{
+    width: 25%;
+  }
+  .cart__clear{
+    width: fit-content;
+  }
+}
+@media (max-width:768px){
+  .cart__item{
+    display: grid;
+    grid-template-areas: 'i d' 'i q' 'i c';
+    gap: 10px;
+  }
+  .cart__image{
+    grid-area: i;
+    width: 190px;
+  }
+  .cart__desc{
+    grid-area: d;
+    width: 100%;
+  }
+  .quantity{
+    grid-area: q;
+    width: 50%;
+    margin: 0 auto;
+  }
+  .cart__clear{
+    grid-area: c;
+    margin: 0 auto;
+  }
+}
+@media (max-width:576px) {
+  .cart__title{
+    font-size: 28px;
+  }
+  .cart__title-total{
+    font-size: 18px;
+  }
 }
