--- a/src/components/scss/components/_cart.scss
+++ b/src/components/scss/components/_cart.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 15px;
 }
 .cart__title-total {
   font-size:24px;
@@ -28,13 +29,10 @@
 }
 .cart__basket{
   height: 150px;
-  display: grid;
-  // flex-direction: column;
-  // justify-content: space-around;
-  // align-items: center;
 }
 .cart__basket h1{
   font-size: 25px;
+  margin-bottom: 15px;
 }
 .cart__basket a{
   padding: 1% 2%;
@@ -59,7 +57,6 @@
 }
 .cart__desc{
   width: 30%;
-  // border: 1px solid red;
   height: 100%;
 }
 .cart__name {
@@ -77,7 +74,6 @@
   width: 15%;
   display: flex;
   justify-content: space-between;
-  // border: 1px solid red;
 }
 .cart_quantity{
   width: 30px;
@@ -88,7 +84,6 @@
   font-size: 14px;
   cursor: pointer;
   width: 20%;
-  // border: 1px solid red;
 }
 .cart_clear-icon {
   width: 30px;
