--- a/src/components/scss/components/_pageTransition.scss
+++ b/src/components/scss/components/_pageTransition.scss
@@ -25,3 +25,8 @@
   transform: scale(0.9);
   transition: opacity 300ms, transform 300ms;
 }
+@media all and (max-width: 425px) {
+  .page {
+    width: 100%;
+  }
+}
