--- a/src/components/scss/components/_cart.scss
+++ b/src/components/scss/components/_cart.scss
@@ -78,6 +78,10 @@
 .cart_quantity{
   width: 30px;
   cursor: pointer;
+    &:disabled {
+      opacity: 30%;
+      cursor:not-allowed;
+    }
 }
 .cart__clear {
   color: black;
