Hidding buttons cart, favourite in the header and shop if user not authorized. Adding @media parameters on the header.

--- a/src/components/scss/libs/app.scss
+++ b/src/components/scss/libs/app.scss
@@ -20,3 +20,12 @@ body {
     max-width: $container;
     padding: 0 40px;
 }
+
+
+@media (max-width:775px) {
+  .container {
+    margin: 0 auto;
+    max-width: $container;
+    padding: 0;
+}
+}
