--- a/src/components/scss/components/_header.scss
+++ b/src/components/scss/components/_header.scss
@@ -46,3 +46,31 @@
   width: 35px;
   height: 35px;
 }
+
+@media (max-width:775px) {
+  .header {
+    padding: 10px;
+  }
+  .header__logo {
+    margin-right: 30px;
+  }
+  .header__nav-list {
+    display: flex;
+    flex-direction: column;
+    & li {
+      margin-right: 20px;
+      & a {
+        color: inherit;
+      }
+    }
+  }
+}
+
+@media (max-width:445px) {
+  .header__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  
+}
