--- a/src/components/scss/components/_shop.scss
+++ b/src/components/scss/components/_shop.scss
@@ -161,6 +161,7 @@
   background: white;
   text-align: center;
   margin-right: 10px;
+  cursor: pointer;
   }
   .nav a {
   text-decoration: none;
@@ -186,7 +187,11 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   color: #1c1c1c;
-  border: 1px solid #999;
+  border: 1px solid #a8a7a7;
+  }
+  .topcategory > li > a:hover {
+    background-color: rgb(33, 152, 152);
+    color:#f6f6f6
   }
   .subcategory {
   position: absolute;
@@ -200,7 +205,7 @@
   }
   .subcategory li {
   position: relative;
-  border: 1px solid #999;
+  border: 0.5px solid #999;
   margin:2px;
   top: -40px;
   }
@@ -212,6 +217,10 @@
   letter-spacing: 1px;
   padding: 10px 20px;
   }
+  .subcategory > li > a:hover {
+    background-color: rgb(33, 152, 152);
+    color:#f6f6f6
+  }
   .subcategory .subcategory {
   position: absolute;
   top: 0;
@@ -222,3 +231,11 @@
   opacity: 1;
   transform: translateY(0px);
   }
+  .nav ul.li.a:hover {
+    color:rgb(33, 152, 152)
+  }
+
+  // .header__nav-list li a:hover {
+  //   color: rgb(33, 152, 152);
+
+  // }
