--- a/src/components/scss/components/_header.scss
+++ b/src/components/scss/components/_header.scss
@@ -92,6 +92,10 @@
       margin-right: 20px;
       & a {
         color: inherit;
+      }
+    }
+  }
+}
 
 @media (max-width: 425px) {
   .header__wrapper {
