fix details, changed api

--- a/src/components/scss/components/_shop.scss
+++ b/src/components/scss/components/_shop.scss
@@ -66,7 +66,11 @@
   padding: 2%;
   box-shadow: 0 0 8px #e0e0e0;
 }
-
+.modal__icon {
+  width: 30px;
+  height: 30px;
+  
+}
 
 .blackdrop {
   width: 100%;
